--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -2,8 +2,8 @@
 http = 0.0.0.0:9008
 chdir = /etc/j4j/J4J_DockerSpawner
 wsgi-file = app.py
-uid = dockerspawner
-gid = dockerspawner
+uid = root
+gid = root
 single-interpreter = true
 enable-threads = true
 processes = 1
